--- a/src/css/card.css
+++ b/src/css/card.css
@@ -64,6 +64,6 @@ body {
     height: 50px;
 }
 .body{
-    background: url('/img/1710693499830.png');
+    background: url('/img/1710168077206.jpg') no-repeat center center fixed;
     background-size: cover;
 }
