--- a/src/css/card.css
+++ b/src/css/card.css
@@ -68,7 +68,6 @@ body {
     bottom: 0;
     left: 0;
     width: 100%;
-    background-color: bisque;
+    background-color: #99ffffaa;
     height: 50px;
 }
-
