--- a/src/css/card.css
+++ b/src/css/card.css
@@ -1,19 +1,22 @@
-.card-container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 16px;
-}
 
 body {
     font-family: 'Arial', sans-serif;
     display: flex;
     justify-content: center;
-    align-items: center;
-    height: 100vh;
+    align-items: flex-start;
+    height: auto;
     margin: 0;
-    background: url('/img/1710168077206.jpg') no-repeat center center fixed;
+    background: url('/src/img/1710168077206.jpg') no-repeat center center fixed;
     background-size: cover;
+}
+
+.card-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 16px;
+    margin-top: 70px;
+    margin-bottom: 70px;
 }
 
 .card {
